<resources>
    <string name="app_name">Club\'s location</string>
    <string name="author_name" translatable="false">Clément Lévêque</string>
    <string name="project_year" translatable="false">2021</string>
    <string name="project_title">Club\'s localization</string>


    <string name="title" translatable="false">Message portrait</string>
    <string name="texteToast">Hello</string>
    <string name="decline">Refuse</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="a_refuse">You refuse !</string>
    <string name="a_accepte">You accept !</string>
    <string name="loc_accepte">You accept location permission !</string>
    <string name="loc_refuse">You denied location permission !</string>
    <string name="settings_info">Informations</string>
    <string name="settings_app_param">Application settings</string>
    <string name="settings_loc_param">Location settings</string>
    <string name="settings_contact">Send me an email</string>
    <string name="settings_eseo_location">Position of ESEO</string>
    <string name="settings_eseo_website">Website of ESEO</string>
    <string name="settings_title">Settings</string>
    <string name="settingPopupMessage">Application created by Clément Lévêque</string>
    <string name="history_title">History</string>
    <string name="historyItemName">List element</string>
    <string name="historyLogoDescription">Item history logo</string>
    <string name="settingsLogoDescription">Item settings logo</string>
    <string name="locationTextUserAdress">User position :</string>
    <string name="locationTextUserCoordonate">GPS coordonates :</string>
    <string name="locationTextAdress">Address</string>
    <string name="locationTextDefaultGPS">- , -</string>
    <string name="locationButtonGetPosition">Distance with ESEO :</string>
    <string name="locationButtonBack">Back</string>
    <string name="mainImageDescription">Main image</string>
    <string name="mainButtonGithub">Github</string>
    <string name="mainButtonDistance">Distance</string>
    <string name="mainButtonHistory">History</string>
    <string name="mainButtonDrones">Quadcopter</string>
    <string name="droneButtonBack">Back</string>
    <string name="settingsItemName">List element</string>
    <string name="mainSettingsLogo">Settings logo</string>
    <string name="settingsButtonBack">Back</string>
    <string name="historyButtonClear">Clear</string>
    <string name="historyButtonBack">Back</string>
    <string name="splashImageDesription">Image</string>
    <string name="drone_title">My drone fleet</string>

    <string name="locationTextLocation">Your are %1$s away from ESEO</string>
    <string name="locationTextGPS" translatable="false">%1$f , %2$f</string>

    <string name="droneImageDescription">Image description</string>
    <string name="droneItemName" translatable="false">drone item name</string>
    <string name="drone_bleu" translatable="false">Diatone GT-M 2018</string>
    <string name="drone_rouge" translatable="false">Flosstyle</string>
    <string name="drone_3D">3D printed drone</string>
    <string name="drone_pilou">Pilou\'s lawnmower</string>
    <string name="drone_antho">Anthony\'s future drone</string>
    <string name="drone_tom">Tom\'s little drone</string>

    <string name="localisation_title">Distance to ESEO</string>
    <string name="mainWarningNoHistory">No positions saved in history</string>


</resources>