<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.localisation.LocalisationActivity">

    <TextView
        android:id="@+id/localisation_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/localisation_title"
        android:textSize="@dimen/TextSizeLarge"
        android:layout_marginTop="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/localisation_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationTextUserAdress"
        android:textSize="@dimen/TextSizeMedium"
        app:layout_constraintBottom_toTopOf="@id/localisation_getlocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationTextAdress"
        android:textSize="@dimen/TextSizeMedium"
        app:layout_constraintTop_toBottomOf="@id/localisation_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/localisation_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationTextUserCoordonate"
        android:textSize="@dimen/TextSizeMedium"
        app:layout_constraintTop_toBottomOf="@id/localisation_position"
        app:layout_constraintBottom_toTopOf="@id/localisation_getlocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/text_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationTextDefaultGPS"
        android:textSize="@dimen/TextSizeMedium"
        app:layout_constraintTop_toBottomOf="@id/localisation_gps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/localisation_getlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationButtonGetPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
    <Button
        android:id="@+id/localisation_retour"
        android:text="@string/locationButtonBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="10sp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>