<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryActivity">

    <TextView
        android:id="@+id/history_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/history_title"
        android:textSize="@dimen/TextSizeLarge"
        android:layout_marginTop="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/history_title"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_history" />

    <Button
        android:id="@+id/history_back"
        android:text="@string/historyButtonBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="10sp"
        />

    <Button
        android:id="@+id/history_clear"
        android:text="@string/historyButtonClear"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>