<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashScreen">

    <TextView
        android:id="@+id/project_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/project_title"
        android:textSize="@dimen/TextSizeLarge"
        android:layout_marginTop="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/project_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="L'historique de vos localisations mais accessible, pas comme Google !"
        android:textSize="@dimen/TextSizeMedium"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_title"/>

    <ImageView
        android:id="@+id/image_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/image_loc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/project_author"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:indeterminateTint=""/>

    <TextView
        android:id="@+id/project_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textSize="@dimen/TextSizeMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/project_year"/>
    <TextView
        android:id="@+id/project_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_year"
        android:textSize="@dimen/TextSizeSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>